--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ---
 layout: home
+#Index page
 ---
 <meta http-equiv='cache-control' content='no-cache'> 
 <meta http-equiv='expires' content='0'> 
